--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,7 +20,4 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
- pundit:
-   default: 'You cannot perform this action.'
-   post_policy:
-     destroy?: 'You cannot destroy this post!'
+  hello: "Hello world"
